fixing alignment on login box

--- a/GraffitiTracker/src/main/webapp/resources/css/graffitiTracker.css
+++ b/GraffitiTracker/src/main/webapp/resources/css/graffitiTracker.css
@@ -51,7 +51,8 @@ body {
   float: right;
   line-height: 1.2;
   margin-bottom: 10px;
-  margin-top: 6px;
+  margin-top: 24px;
+  margin-right: 6px;
   padding: 12px;
   width: 162px;
 }
